--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@main
 
       - name: Run GitHub Super Linter
-        uses: github/super-linter@main
+        uses: github/super-linter@4.10.1
         env:
           VALIDATE_ALL_CODEBASE: true
           LINTER_RULES_PATH: /
